sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:5: error: '=' expected but ';' found.
  for (i <- 0 to l){
^